@@ -5,7 +5,15 @@
 ?>
 <article id="post-<?php the_ID(); ?>" <?php post_class(); ?>>
 	<header class="entry-header">
-		<h1 class="entry-title<?php if( themeblvd_get_att( 'show_meta' ) ) echo ' entry-title-with-meta'; ?>"><a href="<?php the_permalink(); ?>" title="<?php the_title(); ?>"><?php the_title(); ?></a></h1>
+		<?php if( is_single() ) : ?>
+			<h1 class="entry-title<?php if( themeblvd_get_att( 'show_meta' ) ) echo ' entry-title-with-meta'; ?>">
+				<?php the_title(); ?>
+			</h1>
+		<?php else : ?>
+			<h1 class="entry-title<?php if( themeblvd_get_att( 'show_meta' ) ) echo ' entry-title-with-meta'; ?>">
+				<a href="<?php the_permalink(); ?>" title="<?php the_title(); ?>"><?php the_title(); ?></a>
+			</h1>
+		<?php endif; ?>
 		<?php if( themeblvd_get_att( 'show_meta' ) ) : ?>
 			<?php themeblvd_blog_meta(); ?>
 		<?php endif; ?>
